knote.yml
apiVersion: v1
kind: Service
metadata:
  namespace: knote-app
  name: knote

spec:
  selector:
    app: knote
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer #NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: knote-app
  name: knote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knote
  template:
    metadata:
      labels:
        app: knote
    spec:
      containers:
        - name: knote
          image: heder24/my-app:knote
          ports:
            - containerPort: 3000
      # imagePullSecrets:
      #   - name: regcred

          imagePullPolicy: Always
