ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    akubernetes.io/role/elb	1 or ``
    # alb.ingress.kubernetes.io/certificate-arn: acm_ssl_arn
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/group.name: app
    alb.ingress.kubernetes.io/actions.ssl-redirect: >-
        {
            "Type": "redirect",
            "RedirectConfig": {
                "Protocol": "HTTPS",
                "Port": "443",
                "Host": "#{host}",
                "Path": "/#{path}",
                "Query": "#{query}",
                "StatusCode": "HTTP_301"
            }
        }
spec:
  rules:
     - host: www.hederdevops.com  ##Replace the host value with your desired custom domain 
       http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: knote ##Replace service name example with SVC that you created during the sample application deployment
                port:
                  number: 80 ##Replace 80 with application port number
